[package]
name = "mongodb-pipeline-runner"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "mpr"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.17", features = ["derive"]}
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
